add id to html elements

--- a/index.html
+++ b/index.html
@@ -16,14 +16,15 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css">
+    <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
 </head>
 <body>
     <div class="container">
         <div class="wrapper-app">
-            <h1>Lagos</h1>
+            <h1 id="city-name">Lagos</h1>
             <ul>
-                <li>Friday 05:00</li>
-                <li>Cloudy</li>
+                <li id="current-time">Friday 05:00</li>
+                <li id="weather-state">Cloudy</li>
             </ul>
             <div class="row">
                 <div class="col">
@@ -31,7 +32,7 @@
                         <img src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png" alt="cloudy">
                         <!--<img src="partly-cloudy.png" alt="cloudy" />-->
                         <div class="temp-container">
-                            <p class="temp">19</p>
+                            <p class="temp" id="temperature">19</p>
                             <p class="degree"><a href="#" id="cel">°C</a> | <a href="#" id="faren">°F</a></p>
 
                         </div>
@@ -40,9 +41,9 @@
                 </div>
                 <div class="col">
                     <ul>
-                        <li>Precipitation: 0%</li>
-                        <li>Humidity: 32%</li>
-                        <li>Wind: km/h</li>
+                        <li id="preVal">Precipitation: 0%</li>
+                        <li id="humVal">Humidity: 32%</li>
+                        <li id="winVal">Wind: km/h</li>
                     </ul>
                 </div>
             </div>
@@ -53,6 +54,7 @@
         </p>
 
     </div>
+    <script src="index.js"></script>
     
 </body>
 </html>
