--- a/index.html
+++ b/index.html
@@ -41,17 +41,17 @@
                 </div>
                 <div class="col">
                     <ul>
-                        <li id="preVal">Precipitation: 0%</li>
-                        <li id="humVal">Humidity: 32%</li>
-                        <li id="winVal">Wind: km/h</li>
+                        <li id="vis">Visibility: 5000</li>
+                        <li id="hum-val">Humidity: 32%</li>
+                        <li id="win-val">Wind: km/h</li>
                     </ul>
                 </div>
             </div>
 
         </div>
-        <p class="foot">
+        <footer class="foot">
             <a href="https://github.com/lowlah/weather_app" target="_blank">open source code</a> by Omolola Oladeinde
-        </p>
+        </footer>
 
     </div>
     <script src="index.js"></script>
