--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <div class="container">
         <div class="wrapper-app">
             <header>
-                <form>
-                    <input type="search" placeholder="Enter a city .....">
-                    <input type="submit" value="search">
+                <form class="form-search">
+                    <input type="search" placeholder="Enter a city ....." class="city-input">
+                    <input type="submit" value="search" class="submit-button">
                 </form>
             </header>
             <main>
